fix: fixed the header on mobile

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -62,6 +62,7 @@ header {
     visibility: hidden;
     height: 0;
     background-color: rgba(0, 0, 0, 0.3);
+    z-index: 2;
 }
 
 .header-item {
@@ -75,6 +76,7 @@ header {
     position: absolute;
     right: 24px;
     top: 24px;
+    z-index: 2;
 }
 
 .bar1, .bar2, .bar3 {
